--- a/mysite/hotel/templates/homepage.html
+++ b/mysite/hotel/templates/homepage.html
@@ -1,18 +1,22 @@
 {% extends 'index.html' %}
 {% load static %}
 
-
 {% block title %}
     Hotel SENAI
 {% endblock %}
 
 
-
 {% block body %}
     {% for item in dados_hotel %}
-        <div class="p-5 text-center">
-        <h1>Bem-vindos ao {{item.titulo}}!</h1>
-        <h3>{{item.descricao}}</h3>
+        <div class="container-fluid">
+            <div class="jumbotron jumbotron-fluid text-center bg-light mt-5">
+                <div class="container">
+                    <img src="{% static 'img/hotel.jpg' %}" class="img-fluid mb-3" alt="Banner do Hotel" style="max-height: 200px;">
+                    <h1 class="display-4">Bem-vindos ao {{ item.titulo }}!</h1>
+                    <p class="lead">{{ item.descricao }}</p>
+                    <a href="reservar" class="btn btn-primary btn-lg">Faça sua reserva</a>
+                </div>
+            </div>
         </div>
     {% endfor %}
 {% endblock %}
