--- a/mysite/templates/nav.html
+++ b/mysite/templates/nav.html
@@ -1,15 +1,16 @@
-<nav class="navbar" style="background-color: rgb(5, 5, 6); color: #ffffff " >
+<nav class="navbar bg-dark" style=" color: #ffffff " >
     {% for item in dados_hotel %}
     <div class="container-fluid">
         <div>
-            <a style="color: #ffffff;" class="navbar-brand d-flex justify-content-center align-items-center gap-3" href="http://127.0.0.1:8000/">
+            <a style="color: #ffffff;" class="navbar-brand d-flex justify-content-center align-items-center gap-3" href="/">
                 <img src="{{item.logo.url}}" alt="Logo" width="150" height="50" class="d-inline-block align-text-top">
                 {{item.titulo}}
             </a>
         </div>
         <div class="d-flex flex-row gap-3 pe-2">
-            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/quarto/">Quartos</a>
-            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/">Home</a>
+            <a class="nav-link active" aria-current="page" href="quarto">Quartos</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="reservar">Reservar</a>
         </div>
     </div>
     {% endfor %}
