--- a/mysite/hotel/templates/homepage2.html
+++ b/mysite/hotel/templates/homepage2.html
@@ -6,9 +6,8 @@
 {% endblock %}
 
 {% block nav %}
-    {% include 'nav.html' %}
+    {% include 'nav2.html' %}
 {% endblock %}
-
 
 {% block body %}
     {% for item in dados_hotel %}
