--- a/mysite/hotel/templates/quartos.html
+++ b/mysite/hotel/templates/quartos.html
@@ -5,6 +5,10 @@
     Quartos
 {% endblock %}
 
+{% block nav %}
+    {% include 'nav.html' %}
+{% endblock %}
+
 {% block body %}
     <div class="container my-5">
         <div class="row">
