--- a/mysite/templates/nav2.html
+++ b/mysite/templates/nav2.html
@@ -9,9 +9,9 @@
             </a>
         </div>
         <div class="d-flex flex-row gap-3 pe-2">
-            <a class="nav-link active" aria-current="page" href="quarto">Quartos</a>
             <a class="nav-link active" aria-current="page" href="/">Home</a>
-            <a class="nav-link active" aria-current="page" href="reservar">Reservar</a>
+            <a class="nav-link active" aria-current="page" href="login">Login</a>
+            <a class="nav-link active" aria-current="page" href="cadastro">Cadastrar</a>
         </div>
     </div>
     {% endfor %}
